<resources>
    <string name="app_name">WeStudy</string>
    <!--Google Maps-->
    <string name="google_app_id">AIzaSyCSVlBEwkcBoz-kj2U7ntKrWcLKT0_-5BM</string>

    <!--Main Login Activity-->
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign in</string>
    <string name="join_now">Join now</string>
    <string name="welcome_to_westudy">Welcome to WeStudy</string>
    <string name="discover_westudy">Discover study groups near you.</string>

    <!--Login Activity-->
    <string name="create_account">Create a new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address_hint">jamescole@mcmaster.ca</string>
    <string name="password_hint">********</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="westudy">WeStudy</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="create_account_btn">CREATE ACCOUNT</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="password">Password</string>
    <string name="email_text">Email</string>
    <string name="create_account_btn_text">CREATE ACCOUNT</string>
    <string name="join_us_banner">Join us!</string>
    <string name="confirm_password_tv">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <!--Create Profile Activity-->
    <string name="profile_name">James Cole</string>
    <string name="profile_pic">hat_icon</string>
    <string name="university_tv">McMaster University</string>
    <string name="profile_program">Theoretical Physics</string>
    <string name="profile_year">Third Year</string>
    <string name="menu_next">Next</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>
    <string name="full_name_hint">Full Name</string>
    <string name="university_hint">University</string>
    <string name="program_department_hint">Program/Department</string>
    <string name="program_year_hint">Program Year</string>
    <string name="connect_messaging_api">Connect to messaging API</string>
    <string name="api_integration_btn">API Integration</string>

    <!--Create Preference Activity-->
    <string name="subject_header">Subject</string>
    <string name="type_header">Type</string>

    <!--Left Menu Nav Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">James Cole</string>
    <string name="user_rep">Reputation: 40</string>
    <string name="item_profile">Profile</string>
    <string name="item_study_group">Study Group</string>
    <string name="item_history">History</string>
    <string name="item_analytics">Analytics <small><small><sup>BETA</sup></small></small></string>
    <string name="item_options">Options</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About</string>
    <string name="item_help">Help</string>

    <!--Dashboard Screen-->
    <string name="cant_find_status">Can\'t find a study group? Click the button on the right to create your own!</string>
    <string name="search_study_group_hint">Search for study groups</string>
    <string name="description">Description:\n<i>"We will be covering chapters 1 to 5. Bring your own textbook and laptop.</i></string>

    <!--Study Session Types-->
    <string-array name="session_types_array">
        <item>Assignment</item>
        <item>Practice Problems</item>
        <item>Midterm Review</item>
        <item>Exam Review</item>
        <item>Weekly Lecture Review</item>
        <item>Lab Prep</item>
    </string-array>
</resources>
