<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24px"
            android:title="@string/item_profile" />
        <item
            android:id="@+id/nav_study_group"
            android:icon="@drawable/ic_group_add_black_24px"
            android:title="@string/item_study_group" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24px"
            android:title="@string/item_history" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_trending_up_black_24px"
            android:title="@string/item_analytics" />
    </group>

    <item
        android:title="@string/item_options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/item_settings" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/item_about" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/item_help" />
        </menu>
    </item>

</menu>
