<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_container"
    tools:context="com.projectg.westudy.LoginSignup.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_banner_tv"
        android:text="@string/welcome_back"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        android:id="@+id/email_tv"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/email_et"
        android:layout_alignStart="@+id/email_et"
        android:layout_below="@+id/register_banner_tv" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_below="@id/email_tv"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/regstr_pword_tv"
        android:layout_below="@+id/email_et"
        android:layout_alignLeft="@+id/email_et"
        android:layout_alignStart="@+id/email_et"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_et"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_below="@id/regstr_pword_tv"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_rl"
        android:layout_below="@id/pass_et"
        android:background="@drawable/green_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="42dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/join_now_tv"
            android:text="@string/sign_in"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_tv"
        android:text="@string/forgot_password"
        android:layout_below="@id/sign_in_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/already_member_tv"
        android:text="@string/create_account"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp" />

    <include
        layout="@layout/error_layout"/>

</RelativeLayout>
