<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_container"
    tools:context=".LoginSignup.MainLoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/westudy_title_rl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/westudy_title_tv"
            android:text="@string/welcome_to_westudy"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discover_westudy_rl"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/westudy_title_rl"
        android:layout_marginTop="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discover_westudy_tv"
            android:text="@string/discover_westudy"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/join_now_rl"
        android:layout_above="@+id/sign_in_ll"
        android:background="@drawable/green_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:layout_marginBottom="96dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/join_now_tv"
            android:text="@string/join_now"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_ll"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/already_member_tv"
            android:text="@string/already_a_member" />

        <View
            android:layout_width="8dp"
            android:layout_height="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_tv"
            android:text="@string/sign_in"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>
